fix fs-controller spacing

--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -36,8 +36,7 @@ body {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    gap: 16px;
-    margin-top: 16px;
+    gap: 10px;
 }
 
 .fs-controller h1 {
@@ -49,6 +48,7 @@ body {
 .fs-controller .panel {
     flex: 1 1 auto;
     background-color: #000;
+    margin-top: 10px;
 }
 
 .fs-controller .panel .content {
